modified:   FanStateFaultDetection.ipynb

--- a/FanStateFaultDetection.ipynb
+++ b/FanStateFaultDetection.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fan State Analysis for AHU 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -113,6 +120,13 @@
     "plt.tight_layout()\n",
     "plt.savefig(\"Fan_State_Changes_Ahu_1.png\", dpi=600)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fan State Analysis for AHU 2"
    ]
   },
   {
